--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.2.1",
     "primeicons": "^6.0.1",
     "primevue": "^3.21.0",
     "socket.io-client": "^4.5.4",
+    "validatorjs": "^3.22.1",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
